<resources>
    <string name="About">About</string>
    <string name="Accelerometer">Accelerometer</string>
    <string name="Air_Out">Air-Out</string>
    <string name="All_Down">All-Down</string>
    <string name="All_Up">All-Up</string>
    <string name="Auto">Auto</string>
    <string name="BAR">BAR</string>
    <string name="Calibration">Calibration</string>
    <string name="Cancel">Cancel</string>
    <string name="Caution">Caution</string>
    <string name="Complete">Complete</string>
    <string name="Compressor">Compressor</string>
    <string name="Continue">Continue</string>
    <string name="Disable">Disable</string>
    <string name="Disabled">Disabled</string>
    <string name="Display">Display</string>
    <string name="Done">Done</string>
    <string name="Dual">Dual</string>
    <string name="Enable">Enable</string>
    <string name="Enabled">Enabled</string>
    <string name="Error">Error</string>
    <string name="FAULT">FAULT</string>
    <string name="FL">FL</string>
    <string name="FR">FR</string>
    <string name="Fault">Fault</string>
    <string name="Front_Down">Front-Down</string>
    <string name="Front_Up">Front-Up</string>
    <string name="H">H</string>
    <string name="Height">Height</string>
    <string name="Limit">Limit</string>
    <string name="Manifold">Manifold</string>
    <string name="Manual">Manual</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Off">Off</string>
    <string name="On">On</string>
    <string name="One">One</string>
    <string name="Operation">Operation</string>
    <string name="P">P</string>
    <string name="PSI">PSI</string>
    <string name="Pairing">Pairing</string>
    <string name="Pre_Set_Maintain">Pre-Set-Maintain</string>
    <string name="Preset">Preset</string>
    <string name="Pressure">Pressure</string>
    <string name="RL">RL</string>
    <string name="RR">RR</string>
    <string name="Resetting">Resetting</string>
    <string name="Rise_On_Start">Rise-On-Start</string>
    <string name="Save">Save</string>
    <string name="Saved">Saved</string>
    <string name="Saving">Saving</string>
    <string name="Settings">Settings</string>
    <string name="Setup">Setup</string>
    <string name="Show_Mode">Show Mode</string>
    <string name="Single">Single</string>
    <string name="Start">Start</string>
    <string name="Step">Step</string>
    <string name="Stop">Stop</string>
    <string name="Success">Success</string>
    <string name="Two">Two</string>
    <string name="Units">Units</string>
    <string name="Update">Update</string>
    <string name="Valve">Valve</string>
    <string name="Warning">Warning</string>
    <string name="Yes">Yes</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceleration_hold">Acceleration Hold</string>
    <string name="acceleration_threshold">Acceleration Threshold</string>
    <string name="adjust_height_hold_preset_to_save">adjust height, hold preset to save</string>
    <string name="air_out">air-out</string>
    <string name="all_down_button">All-Down Button</string>
    <string name="all_up_button">All-Up Button</string>
    <string name="an_unknown_error_occured" translatable="false">An unknown error occured.</string>
    <string name="android_app">Android App</string>
    <string name="android_update_available">Android Update Available</string>
    <string name="anti_cross_load">Anti Cross-Load</string>
    <string name="app_name" translatable="false">ALP3</string>
    <string name="appcenter_distribute_dialog_actioned_on_disabled_toast">Distribute was disabled</string>
    <string name="appcenter_distribute_download_progress_number_format">%1$d MB of %2$d MB</string>
    <string name="appcenter_distribute_downloading_error" translatable="false">Failed to download app update</string>
    <string name="appcenter_distribute_downloading_mandatory_update">Downloading update</string>
    <string name="appcenter_distribute_downloading_update" translatable="false">@string/appcenter_distribute_downloading_mandatory_update</string>
    <string name="appcenter_distribute_install">Install</string>
    <string name="appcenter_distribute_install_ready_message">%1$s %2$s (%3$d) has been downloaded and is ready to be installed.</string>
    <string name="appcenter_distribute_install_ready_title">App update downloaded</string>
    <string name="appcenter_distribute_notification_category">App updates</string>
    <string name="appcenter_distribute_unknown_sources_dialog_message">For security, your device is set to block installation of apps obtained from unknown sources.</string>
    <string name="appcenter_distribute_unknown_sources_dialog_settings">Settings</string>
    <string name="appcenter_distribute_update_dialog_download">Download</string>
    <string name="appcenter_distribute_update_dialog_message_mandatory">The developers of this app require you to update to %1$s %2$s (%3$d).</string>
    <string name="appcenter_distribute_update_dialog_message_optional">%1$s %2$s (%3$d) is available to download and install.</string>
    <string name="appcenter_distribute_update_dialog_postpone">Ask me in a day</string>
    <string name="appcenter_distribute_update_dialog_title">App update available</string>
    <string name="appcenter_distribute_update_dialog_view_release_notes">View release notes</string>
    <string name="appcenter_distribute_update_failed_dialog_ignore">Ignore</string>
    <string name="appcenter_distribute_update_failed_dialog_message">This release was either side-loaded or downloaded using a browser in private mode.</string>
    <string name="appcenter_distribute_update_failed_dialog_reinstall">Reinstall app</string>
    <string name="appcenter_distribute_update_failed_dialog_title">In-app updates disabled</string>
    <string name="are_the_front_wheels_straight">Are the front wheels straight?</string>
    <string name="attempt_pairing">Attempt Pairing</string>
    <string name="authorized" translatable="false">Authorized:</string>
    <string name="auto_sensor_limits">Auto Sensor Limits</string>
    <string name="axle_equalization">Axle Equalization</string>
    <string name="ble_access_has_not_been_authorized">BLE access has not been authorized.</string>
    <string name="ble_is_unsupported_with_this_device">BLE is unsupported with this device.</string>
    <string name="bluetooth_not_connected">bluetooth not connected</string>
    <string name="calibrate_height_manual_or_auto">Calibrate height manual or auto?</string>
    <string name="calibrate_pressure_manual_or_auto">Calibrate pressure manual or auto?</string>
    <string name="calibrating_front">Calibrating front</string>
    <string name="calibrating_rear">Calibrating rear</string>
    <string name="calibration">calibration</string>
    <string name="calibration_fault">Calibration Fault</string>
    <string name="calibration_in_progress">Calibration In Progress</string>
    <string name="calibration_not_completed">Calibration not completed</string>
    <string name="calibration_successful">Calibration Successful</string>
    <string name="calibration_wizard">Calibration Wizard</string>
    <string name="change_password" translatable="false">Change Password</string>
    <string name="check_for_firmware_update">Check for firmware update</string>
    <string name="check_your_email_for_password_reset_code" translatable="false">Check your email for password reset code.</string>
    <string name="checking_mount">Checking Mount</string>
    <string name="checking_wiring">Checking wiring</string>
    <string name="choose_display_configuration">Choose Display Configuration</string>
    <string name="communications_busy_please_retry">Communications busy, please retry</string>
    <string name="communications_timeout">Communications Timeout</string>
    <string name="complete">Complete!</string>
    <string name="compressor_damage_possible_refer_to_compressor_mfg_spec">Compressor damage possible. Refer to compressor mfg spec.</string>
    <string name="compressor_freeze">Compressor Freeze</string>
    <string name="compressor_overrun">Compressor Overrun</string>
    <string name="connecting">connecting</string>
    <string name="controls_the_compressor_manually">Controls the compressor manually</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="devices_found">devices found:</string>
    <string name="discovering_alp3_devices">Discovering ALP3 Devices</string>
    <string name="display_version">Display Version</string>
    <string name="email" translatable="false">email</string>
    <string name="forgot_password" translatable="false">Forgot Password</string>
    <string name="login">Login</string>
    <string name="mandatory_update_available">Mandatory Update Available</string>
    <string name="manifold_version">Manifold Version</string>
    <string name="new_password">new password</string>
    <string name="old_password">old password</string>
    <string name="pairing_required">Pairing Required</string>
    <string name="password">password</string>
    <string name="re_enter_password">re-enter password</string>
    <string name="release_notes">Release Notes</string>
    <string name="reset_code">reset code</string>
    <string name="searching">searching …</string>
    <string name="send_reset_code">Send Reset Code</string>
    <string name="status">status</string>
    <string name="tap_device_to_connect">tap device to connect</string>
    <string name="the_manifold_must_be_placed_in_pairing_mode_by_using_the_display_or_ignition_sequence">The manifold must be placed in pairing mode by using the display or ignition sequence.</string>
    <string name="this_device_has_not_been_paired_with_this_vehicle_yet">This device has not been paired with this vehicle yet.</string>
    <string name="updating_firmware">Updating Firmware</string>
    <string name="waiting">waiting ...</string>
    <string name="warning_firmware_update_may_take_up_to_10_minutes_vehicle_must_be_parked_during_the_entire_process">Warning: Firmware update may take up to 10 minutes. Vehicle must be parked during the entire process.</string>
</resources>