<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:ems="10"
            android:inputType="textEmailAddress"/>
        <Button
            android:id="@+id/resetCodeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/send_reset_code"
            android:layout_below="@+id/emailAddressEditText"
            android:layout_centerHorizontal="true"/>
        <TextView
            android:textSize="18sp"
            android:textColor="@color/light_text"
            android:id="@+id/infoText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/check_your_email_for_password_reset_code"
            android:layout_below="@+id/resetCodeButton"/>
        <EditText
            android:id="@+id/resetCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/reset_code"
            android:ems="10"
            android:layout_below="@+id/infoText"
            android:inputType="number"/>
        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/new_password"
            android:ems="10"
            android:layout_below="@+id/resetCodeEditText"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/verifyPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/re_enter_password"
            android:ems="10"
            android:layout_below="@+id/passwordEditText"
            android:inputType="textPassword"/>
        <Button
            android:id="@+id/setPasswordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/change_password"
            android:layout_below="@+id/verifyPasswordEditText"
            android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
