<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pairing_required"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/light_text"
        android:id="@+id/infoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:layout_marginBottom="10px"
        android:text="@string/this_device_has_not_been_paired_with_this_vehicle_yet"
        android:layout_below="@+id/titleText"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/light_text"
        android:id="@+id/infoText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40px"
        android:layout_marginBottom="10px"
        android:text="@string/the_manifold_must_be_placed_in_pairing_mode_by_using_the_display_or_ignition_sequence"
        android:layout_below="@+id/infoText"/>
    <Button
        android:id="@+id/pairButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100px"
        android:text="@string/attempt_pairing"
        android:layout_below="@+id/infoText2"
        android:layout_centerHorizontal="true"/>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
