<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mandatory_update_available"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/light_text"
        android:id="@+id/manifoldVersionTitleTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manifold_version"
        android:layout_below="@+id/titleTextView"/>
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/manifoldVersionTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/titleTextView"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/light_text"
        android:id="@+id/displayVersionTitleTextView"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/display_version"
        android:layout_below="@+id/manifoldVersionTitleTextView"/>
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/displayVersionTextView"
        android:paddingTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:layout_below="@+id/manifoldVersionTextView"
        android:layout_alignParentEnd="true"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/light_text"
        android:id="@+id/releaseNotesTitleTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/release_notes"
        android:layout_below="@+id/displayVersionTitleTextView"/>
    <WebView
        android:id="@+id/releaseNotesWebView"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/warningTextView"
        android:layout_below="@+id/releaseNotesTitleTextView"/>
    <TextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/light_text"
        android:id="@+id/warningTextView"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warning_firmware_update_may_take_up_to_10_minutes_vehicle_must_be_parked_during_the_entire_process"
        android:layout_above="@+id/cancelButton"/>
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"/>
    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Update"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
