<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="20sp"
        android:textStyle="bold"
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/updating_firmware"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/light_text"
        android:id="@+id/statusTitleTextView"
        android:paddingTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_below="@+id/titleTextView"/>
    <TextView
        android:textSize="16sp"
        android:id="@+id/statusTextView"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:layout_below="@+id/statusTitleTextView"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        style="?android:attr/progressBarStyleHorizontal"/>
</RelativeLayout>
